feat: added already existing bergamot project changes

--- a/initdb.conf
+++ b/initdb.conf
@@ -16,17 +16,17 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 */
-#error_reporting(-1);
-#ini_set('display_errors', 'On');
+error_reporting(-1);
+ini_set('display_errors', 'On');
 
-define ("ROOTNAME", "root");
-define ("ROOTPWD", "");
+define ("ROOTNAME", "admin");
+define ("ROOTPWD", "lama_admin_catastrophic");
 
-define ("DB_NAME", "mtequal");
+define ("DB_NAME", "mtequal_zli");
 define ("DB_HOST", "127.0.0.1");
 define ("DB_USER", "root");
-define ("DB_PASSWORD", "");
-define ("SYSADMIN", "your_email@example.it");
+define ("DB_PASSWORD", "specialab");
+define ("SYSADMIN", "f.blain@sheffield.ac.uk");
 
 define ("DEBUG", "no");
 define ("QUERY_LOG", "yes"); //use a Mysql log table
@@ -36,7 +36,7 @@ define ("SAVELOG", 0);
 # set the maximum number of source sentence per task: put -1 for no limitation
 define ("SENTENCE_LIMIT", -1);
 
-date_default_timezone_set('Europe/Rome'); 
+date_default_timezone_set('Europe/London'); 
 #language settings: the array contains the name of the language, its flag image, and if it must be written right-to-left (rtl) or left-to-right (it is the default, using an empty string).
 $languages = array(
 	"en" => array ("English","img/flag/en.png",""),
@@ -49,6 +49,7 @@ $sentenceTypes = array ("source","reference","sys1","sys2","sys3","sys4","sys5")
 
 $taskTypes = array ("quality" => "Quality Rating"
 		,"errors" => "Error Annotation"
+		,"errors_test" => "Error Annotation (Qualification Test)"
 		,"wordaligner" => "Word Alignment");
 
 $userTypes = array ("annotator" => array(""),
